--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>reveal.js</title>
+    <title>Lecture 1</title>
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/white.css">
     <link rel="stylesheet" href="css/theme/custom.css">
@@ -49,56 +49,71 @@
                         <li class="fragment">为什么要学Python？
                             <ul>
                                 <li class="fragment">原因一：高级 （简单）</li>
-                                <li class="fragment">原因二：普及</li>
-                                <li class="fragment">原因三：强大</li>
+                                <li class="fragment">原因二：普及，社区内容丰富</li>
+                                <li class="fragment">原因三：强大，扩展性强</li>
                             </ul>
                         </li>
                     </ul>
                 </section>
                 <section>
-                    TIOBE排行榜: 程序语言的热门程度
+                    TIOBE 编程语言社区发布了 2019 年 9 月编程语言排行榜
                     <div><img data-src="Ranking.png" style="height: 300pt"></div>
+                    TIOBE 预测：Python 将在 3-4 年内超越 Java 和 C
                 </section>
                 <section>
                     <h3>这门课主要涉及3个板块</h3>
                     <ul>
-                        <li class="fragment">基本知识</li>
-                        <li class="fragment">简单的数据分析</li>
-                        <li class="fragment">算法，数据结构，其他内容</li>
+                        <li class="fragment">基本语法</li>
+                        <li class="fragment">数据分析</li>
+                        <li class="fragment">算法</li>
                     </ul>
                 </section>
                 <section>
                     <h3>课程要求</h3>
                     <ol>
-                        <li>每两周一次作业（3%*7=21%）</li>
-                        <li>案例设计 （9%）</li>
+                        <li>一共三次作业（6%*3=18%）</li>
+                        <li>案例设计 （12%）</li>
                         <li>期末考试 （60%）</li>
                         <li>出勤率 (10%)，课堂参与（Bonus）</li>
-                        <li>答疑时间，网上论坛github</li>
+                        <li>答疑时间：Tuesday 14:00-15:00 or by appointment</li>
                         <li>联系方式
                             <ul>
                                 <li>邮箱： wang.lu@mail.shufe.edu.cn</li>
-                                <li>办公室：国际工商管理学院412室</li>
+                                <li>办公室：武东路校区商学院楼412室</li>
                             </ul>
                         </li>
                     </ol>
                 </section>
                 <section>
                     <h3>主要教材</h3>
-                    <div id="leftc"><img data-src="textbook4.jpg" style="height: 350pt"></div>
-                    <div id="rightc"><img data-src="textbook1.jpg" style="height: 350pt"></div>
+                    <div id="leftc"><img data-src="textbook3.jpg" style="height: 350pt"></div>
+                    <div id="rightc"><img data-src="textbook4.jpg" style="height: 350pt"></div>
                 </section>
                 <section>
                     <h3>参考教材</h3>
-                    <div id="leftc"><img data-src="textbook3.jpg" style="height: 350pt"></div>
-                    <div id="rightc"><img data-src="textbook2.jpg" style="height: 350pt"></div>
+                    <div id="leftc"><img data-src="textbook2.jpg" style="height: 350pt"></div>
+                    <div id="rightc"><img data-src="textbook1.jpg" style="height: 350pt"></div>
                 </section>
                 <section>
-                    <h3>课件从哪里获取？</h3>
                     <ul>
-                        <li>我的网站：<a href="https://wangwanglulu.coding.me">wangwanglulu.coding.me</a></li>
-                        <li>如果你需要Pdf文件：在网址末尾加上?print-pdf，然后ctrl+p</li>
-                        <li>或者在BB系统上下载</li>
+                        <li>课件从哪里获取？</li>
+                    <ul>
+                        <li>我的网站：<a href="https://wangwanglulu.cn">wangwanglulu.cn</a>（如果你需要pdf格式文件，请在网址末尾加上?print-pdf，然后ctrl+p）。</li>
+                        <li>或者在上财教学网Blackboard系统上下载</li>
+                    </ul>
+                    <li>作业如何提交？</li>
+                    <ul>
+                        <li>作业为编程题，以电子版的方式提交</li>
+                        <li>作业的时限一般为两周</li>
+                        <li>提交到上财教学网Blackboard系统</li>
+                        <li>下次布置作业时会讲解作业的格式</li>
+                    </ul>
+                    <li>其他</li>
+                    <ul>
+                        <li>除课件外，我的网站上有与每次课相关的资料和课外阅读</li>
+                        <li>主要教材的代码下载与使用</li>
+                        <li>课件为reveal.js格式，如何使用</li>
+                    </ul>
                     </ul>
                 </section>
             </section>
@@ -155,8 +170,8 @@ import this
                 <section>
                     <h3>一些建议</h3>
                     <ol>
-                        <li>初学者要勤写注释</li>
-                        <li>遇到困难，自己查资料找办法解决问题</li>
+                        <li>初学者要勤写注释（什么是注释？）</li>
+                        <li>遇到困难，自己勤查资料找办法解决问题（CSDN, stack overflow）</li>
                         <li>搞清楚需求，解决问题最重要</li>
                         <li>尽量写容易看明白的代码，尽量写少的代码</li>
                         <li>不要复制粘贴，一个字一个字的敲</li>
@@ -211,6 +226,7 @@ import this
                 </section>
                 <section>
                     <p>Python can tell you what type a value has.</p>
+                    <p><b>>>></b> means what you input in the IPython console.</p>
                     <pre style="font-size: 0.77em"><code class="line-numbers" data-trim contenteditable >
 >>> type(4)
 int
@@ -304,7 +320,7 @@ I'm learning    Python.
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
->>> message = 'And now for something completely different'
+>>> message = 'something'
 >>> n = 17
 >>> pi = 3.1415926535897931
 </code></pre>
@@ -351,14 +367,16 @@ float
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
->>> apple = 123 # apple is an integer
+>>> apple = 123 
+# apple is an integer
 >>> print(apple)
 123
 </code></pre>
                         </div>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
->>> apple = 'ABC' # Now apple turns to be a string
+>>> apple = 'ABC' 
+# Now apple turns to be a string
 >>> print(apple)
 ABC
 </code></pre>
@@ -400,7 +418,7 @@ ABC
 SyntaxError: invalid syntax
 >>> more@ = 1000000
 SyntaxError: invalid syntax
->>> class = 'Advanced Theoretical Zymurgy'
+>>> class = 'Advanced Theory'
 SyntaxError: invalid syntax
 </code></pre>
                         </div>
@@ -408,7 +426,9 @@ SyntaxError: invalid syntax
                 </section>
                 <section>
                     <h3>Keywords</h3>
-                    <p>You <b>cannot</b> use the following keyword as variable names since they have been reserved by Python to recognize the structure of the program.</p>
+                    <ul>
+                        <li>You <b>cannot</b> use the following keyword as variable names since they have been reserved by Python to recognize the structure of the program.</li>
+                    </ul>
                     <div class="fragment">
                         <pre><code class="line-numbers" data-trim contenteditable >
 and del from None True
@@ -455,9 +475,10 @@ print(x1q3p9afd)
                     <h2 style="color: white">1.6 Operators, input and output</h2>
                 </section>
                 <section>
+                    <h3>Operators</h3>
                     <ul>
                         <li>
-                            <p class="fragment">Operatiors: $+,-,*,/,**(exponentiation)$</p>
+                            <p class="fragment">$+,-,*,/,**$(exponentiation), %, //</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -521,22 +542,24 @@ print(x1q3p9afd)
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
->>> input = input()
+>>> x = input()
 Some silly stuff
->>> print(input)
+>>> print(x)
 Some silly stuff
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">You can pass a string to input to be displayed to the user before pausing for input:</p>
+                        <li class="fragment" >
+                            <p>You can pass a string to input to be displayed to the user before pausing for input</p>
                         </li>
+                        <li class="fragment"><b>Note: By using input(), the type of what the user inputs is always string!</b></li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
 >>> name = input('What is your name?\n')
 What is your name?
 Chuck 
 >>> print(name)
-Chuck #The type is string.
+Chuck 
+#The type is string.
 </code></pre>
                         </div>
                     </ul>
@@ -548,9 +571,9 @@ Chuck #The type is string.
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
->>> prompt = 'What...is the airspeed velocity of an unladen swallow?\n'
+>>> prompt = 'What is the speed?\n'
 >>> speed = input(prompt)
-What...is the airspeed velocity of an unladen swallow?
+What is the speed?
 17
 >>> int(speed)
 17
@@ -564,8 +587,9 @@ What...is the airspeed velocity of an unladen swallow?
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
 >>> speed = input(prompt)
-What...is the airspeed velocity of an unladen swallow?lao
-What do you mean, an African or a European swallow?
+What is the speed?
+I do not know. #This is what you input.
+
 >>> int(speed)
 ValueError: invalid literal for int() with base 10:
 </code></pre>
@@ -573,17 +597,19 @@ ValueError: invalid literal for int() with base 10:
                     </ul>
                 </section>
                 <section>
+                    <ul>
+                        <li><p>For Editor, <b>#output</b> means the output of a sequence of code. Basically, the Editor is the same with IPython console.</p></li>
+                    </ul>
+                    
                     <div class="fragment">
                         <pre><code class="line-numbers" data-trim contenteditable >
 age = 23
 message = "Happy " + age + "rd Birthday!"
 print(message)
-</code></pre>
-                    </div>
-                    <div class="fragment">
-                        <pre><code class="line-numbers" data-trim contenteditable >
+
+#output
 Traceback (most recent call last):
-File "birthday.py", line 2, in <module>
+File "birthday.py", line 2, in &lt;module&gt;
 message = "Happy " + age + "rd Birthday!"
 TypeError: Can't convert 'int' object to str implicitly
 </code></pre>
@@ -594,6 +620,7 @@ age = 23
 message = "Happy " + str(age) + "rd Birthday!"
 print(message)
 
+#output
 Happy 23rd Birthday!
 </code></pre>
                     </div>
@@ -605,11 +632,17 @@ Happy 23rd Birthday!
                 </section>
                 <section>
                     Changing Case in a String with Methods
+                    <ul>
+                        <li>What is Method? (方法)</li>
+                        <li>Is it the same with function? (函数)</li>
+                    </ul>
                     <div class="fragment">
                         <div>
                             <pre><code class="line-numbers" data-trim contenteditable >
->>> name = "ada lovelace"
->>> print(name.title())
+name = "ada lovelace"
+print(name.title())
+
+#output
 Ada Lovelace
 </code></pre>
                         </div>
@@ -618,10 +651,8 @@ Ada Lovelace
 name = "Ada Lovelace"
 print(name.upper())
 print(name.lower())
-</code></pre>
-                        </div>
-                        <div>
-                            <pre><code class="line-numbers" data-trim contenteditable >
+
+#output
 ADA LOVELACE
 ada lovelace
 </code></pre>
@@ -636,6 +667,7 @@ last_name = "lovelace"
 full_name = first_name + " " + last_name
 print(full_name)
 
+#output
 ada lovelace
 </code></pre>
                     </div>
@@ -644,20 +676,15 @@ ada lovelace
 
 print("Hello, " + full_name.title() + "!")
 
+#output
 Hello, Ada Lovelace!
-</code></pre>
-                    </div>
-                    <div>
-                        <pre><code class="line-numbers" data-trim contenteditable >
-message = "Hello, " + full_name.title() + "!"
-print(message)
 </code></pre>
                     </div>
                 </section>
                 <section>
-                    Stripping Whitespace
+                   <h3>Stripping Whitespace</h3> 
                     <ul>
-                        <li>To programmers 'python' and 'python ' look pretty much the same. But to a program, they are two different strings. To ensure that no whitespace exists at the right end of a string, use the rstrip() method.</li>
+                        <li><p>To programmers 'python' and 'python ' look pretty much the same. But to a program, they are two different strings. To ensure that no whitespace exists at the right end of a string, use the rstrip() method.</p></li>
                     </ul>
                     <div>
                         <pre><code class="line-numbers" data-trim contenteditable >
@@ -671,7 +698,7 @@ print(message)
 </code></pre>
                     </div>
                     <ul>
-                        <li>However, it is only removed temporarily. To remove the whitespace from the string permanently, you have to store the stripped value back into the variable:</li>
+                        <li><p>However, it is only removed temporarily. To remove the whitespace from the string permanently, you have to store the stripped value back into the variable</p></li>
                     </ul>
                 </section>
                 <section>
@@ -684,7 +711,7 @@ print(message)
 </code></pre>
                     </div>
                     <ul>
-                        <li>You can also strip whitespace from the left side of a string using the lstrip() method or strip whitespace from both sides at once using strip():</li>
+                        <li><p>You can also strip whitespace from the left side of a string using the lstrip() method or strip whitespace from both sides at once using strip()</p></li>
                     </ul>
                     <div>
                         <pre><code class="line-numbers" data-trim contenteditable >
@@ -707,9 +734,8 @@ print(message)
                         <li>Python intro</li>
                         <li>Tips for programming</li>
                         <li>Values, variables, operators, input and output, strings</li>
-                        <ul class="fragment">
-                            <li>Reading: Chapter 2 Debugging</li>
-                        </ul>
+                        <li>Reading: Python for everybody Chapter 2</li>
+
                     </ul>
                 </section>
             </section>
