--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ I'm learning    Python.
                         <li>
                             <p>A variable is a name that refers to a value.</p>
                         </li>
-                        <li>
-                            <p class="fragment">An assignment statement creates new variables and gives them values.</p>
+                        <li class="fragment">
+                            <p>An assignment statement creates new variables and gives them values.</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -325,8 +325,8 @@ I'm learning    Python.
 >>> pi = 3.1415926535897931
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">To display the value of a variable, you can use a print statement.</p>
+                        <li class="fragment">
+                            <p>To display the value of a variable, you can use a print statement.</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -336,8 +336,8 @@ I'm learning    Python.
 3.141592653589793
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">The type of a variable is the type of the value it refers to.</p>
+                        <li class="fragment">
+                            <p>The type of a variable is the type of the value it refers to.</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -353,8 +353,8 @@ float
                 </section>
                 <section>
                     <ul>
-                        <li style="color:red">
-                            <p class="fragment">Note that $=$ means "assignment", not equation.</p>
+                        <li class="fragment" style="color:red">
+                            <p>Note that $=$ means "assignment", not equation.</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -362,8 +362,8 @@ float
 >>> x = x + 10
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">Python is a Dynamically Typed Language. What is Dynamically Typed Language?</p>
+                        <li class="fragment">
+                            <p>Python is a Dynamically Typed Language. What is Dynamically Typed Language?</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -381,8 +381,8 @@ float
 ABC
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">We can assign the value of a variable to another variable.</p>
+                        <li class="fragment">
+                            <p>We can assign the value of a variable to another variable.</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -397,20 +397,20 @@ ABC
                 <section>
                     <h3>Variable name</h3>
                     <ul>
-                        <li>
-                            <p class="fragment">Variable names can be arbitrarily long. They are case sensitive.</p>
+                        <li class="fragment">
+                            <p>Variable names can be arbitrarily long. They are case sensitive.</p>
                         </li>
-                        <li>
-                            <p class="fragment">You <b>cannot</b> start with a number.</p>
+                        <li class="fragment">
+                            <p>You <b>cannot</b> start with a number.</p>
                         </li>
-                        <li>
-                            <p class="fragment">It is common to use underscore character $\_$.</p>
+                        <li class="fragment">
+                            <p>It is common to use underscore character $\_$.</p>
                         </li>
-                        <li>
-                            <p class="fragment">Spaces are not allowed in variable names, but underscores can be used to separate words in variable names.</p>
+                        <li class="fragment">
+                            <p>Spaces are not allowed in variable names, but underscores can be used to separate words in variable names.</p>
                         </li>
-                        <li>
-                            <p class="fragment">Illegal name</p>
+                        <li class="fragment">
+                            <p>Illegal name</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -477,8 +477,8 @@ print(x1q3p9afd)
                 <section>
                     <h3>Operators</h3>
                     <ul>
-                        <li>
-                            <p class="fragment">$+,-,*,/,**$(exponentiation), %, //</p>
+                        <li class="fragment">
+                            <p>$+,-,*,/,**$(exponentiation), %, //</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -510,14 +510,14 @@ print(x1q3p9afd)
 3425
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">Order of operations</p>
+                        <li class="fragment">
+                            <p>Order of operations</p>
                         </li>
                     </ul>
                 </section>
                 <section>
                     <ul>
-                        <li>
+                        <li class="fragment">
                             <p>String operations</p>
                         </li>
                     </ul>
@@ -537,8 +537,8 @@ print(x1q3p9afd)
                 <section>
                     <h3>Input and Output</h3>
                     <ul>
-                        <li>
-                            <p class="fragment">input() and print()</p>
+                        <li class="fragment">
+                            <p>input() and print()</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -566,8 +566,8 @@ Chuck
                 </section>
                 <section>
                     <ul>
-                        <li>
-                            <p class="fragment">If you expect the user to type an integer, you can try to convert the return value to integer using the int() function</p>
+                        <li class="fragment">
+                            <p>If you expect the user to type an integer, you can try to convert the return value to integer using the int() function</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
@@ -581,8 +581,8 @@ What is the speed?
 22
 </code></pre>
                         </div>
-                        <li>
-                            <p class="fragment">It may cause error, if the value cannot be converted.</p>
+                        <li class="fragment">
+                            <p>It may cause error, if the value cannot be converted.</p>
                         </li>
                         <div class="fragment">
                             <pre><code class="line-numbers" data-trim contenteditable >
