--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <section>
                     <h3>这门课主要涉及3个板块</h3>
                     <ul>
-                        <li class="fragment">基本语法</li>
-                        <li class="fragment">数据分析</li>
-                        <li class="fragment">算法</li>
+                        <li>基本语法</li>
+                        <li>数据分析</li>
+                        <li>算法</li>
                     </ul>
                 </section>
                 <section>
@@ -97,19 +97,19 @@
                 <section>
                     <ul>
                         <li>课件从哪里获取？</li>
-                    <ul>
+                    <ul  class="fragment">
                         <li>我的网站：<a href="https://wangwanglulu.cn">wangwanglulu.cn</a>（如果你需要pdf格式文件，请在网址末尾加上?print-pdf，然后ctrl+p）。</li>
                         <li>或者在上财教学网Blackboard系统上下载</li>
                     </ul>
                     <li>作业如何提交？</li>
-                    <ul>
+                    <ul  class="fragment">
                         <li>作业为编程题，以电子版的方式提交</li>
                         <li>作业的时限一般为两周</li>
                         <li>提交到上财教学网Blackboard系统</li>
                         <li>下次布置作业时会讲解作业的格式</li>
                     </ul>
                     <li>其他</li>
-                    <ul>
+                    <ul  class="fragment">
                         <li>除课件外，我的网站上有与每次课相关的资料和课外阅读</li>
                         <li>主要教材的代码下载与使用</li>
                         <li>课件为reveal.js格式，如何使用</li>
