--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
                     <div class="leftc"><img data-src="textbook1.jpg" style="height: 350pt"></div>
                 </section>
                 <section>
+                    <h3>参考教材</h3>
+                    <div class="rightc"><img data-src="textbook5.jpg" style="height: 350pt"></div>
+                    <div class="leftc"><img data-src="textbook6.jpg" style="height: 350pt"></div>
+                </section>
+                <section>
                     <ul>
                         <li>课件从哪里获取？</li>
                         <ul class="fragment">
@@ -167,7 +172,7 @@ import this
                         <li>搞清楚需求，解决问题最重要</li>
                         <li>尽量写容易看明白的代码，尽量写少的代码</li>
                         <li>不要复制粘贴，一个字一个字的敲</li>
-                        <li>不用太在意速度，不需在意网上无意义的争论，不要高估自己写的代码</li>
+                        <li>不用太在意速度，不要高估自己写的代码</li>
                     </ol>
                 </section>
             </section>
