--- a/index.html
+++ b/index.html
@@ -71,15 +71,21 @@
                 <section>
                     <h3>课程要求</h3>
                     <ol>
-                        <li>一共三次作业（12%*3=36%）</li>
-                        <li>案例设计 （14%）</li>
-                        <li>期末案例设计 （40%）</li>
+                        <li>一共三次作业（6%*3=18%）</li>
+                        <li>案例设计 （12%）</li>
+                        <li>期末案例设计 （60%）</li>
                         <li>出勤率 (10%)</li>
                         <li>答疑方式：by email or appointment</li>
                         <li>联系方式
                             <ul>
                                 <li>邮箱： wang.lu@mail.shufe.edu.cn</li>
                                 <li>办公室：武东路校区商学院楼412室</li>
+                            </ul>
+                        </li>
+                        <li>助教联系方式
+                            <ul>
+                            	<li>邓浩然</li>
+                            	<li>邮箱： dreamdhr@foxmail.com</li>
                             </ul>
                         </li>
                     </ol>
