--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <ol>
                         <li>一共三次作业（6%*3=18%）</li>
                         <li>案例设计 （12%）</li>
-                        <li>期末案例设计 （60%）</li>
+                        <li>期末考试 （60%）</li>
                         <li>出勤率 (10%)</li>
                         <li>答疑方式：by email or appointment</li>
                         <li>联系方式
